# url-shortener

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
containers/postgres/docker-entrypoint-initdb.d/: init.sql
src/: lib.rs  main.rs
src/api/: appstate.rs  auth.rs  error_handling.rs  healthcheck.rs  mod.rs  router.rs
src/config/: config.rs
src/data/: user.rs
