[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-macros = "0.4.1"
chrono = "0.4.34"
config = { version = "0.14.0", features = ["json"] }
google-oauth = "1.10.1"
oauth2 = "4.4.2"
once_cell = "1.19.0"
postgres = "0.19.7"
reqwest = "0.11.24"
serde = "1.0.196"
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
tokio = {version = "1.36.0", features = ["rt-multi-thread"]}
tower-http = { version = "0.5.1", features = ["cors"] }
uuid = { version = "1.7.0", features = ["v4"] }
